@@ -1,12 +1,7 @@
 {
-  "count": 72,
-  "uniques": 21,
+  "count": 47,
+  "uniques": 18,
   "clones": [
-    {
-      "timestamp": "2022-04-07T00:00:00Z",
-      "count": 26,
-      "uniques": 5
-    },
     {
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 7,
@@ -39,8 +34,8 @@
     },
     {
       "timestamp": "2022-04-21T00:00:00Z",
-      "count": 6,
-      "uniques": 4
+      "count": 7,
+      "uniques": 5
     }
   ]
 }
