@@ -1,3 +1,9 @@
+2022-04-22T01:44:47Z:
+* notice: last 14d: all unq: 47 18
+* notice: prev accum: outdated-all outdated-unq / all unq: 1743 322 / 1815 355
+* notice: next accum: outdated-all outdated-unq / all unq: 1770 328 / 1817 357
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-21T16:28:38Z:
 * notice: last 14d: all unq: 72 21
 * notice: prev accum: outdated-all outdated-unq / all unq: 1743 322 / 1816 356
